--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="text_book_app">Book App</string>
     <string name="text_welcome_to_book_app">Welcome to Book App</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
