--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_library">Library</string>
+    <string name="text_title_readers">Readers</string>
+    <string name="text_title_likes">Likes</string>
+    <string name="text_quotes">Quotes</string>
+    <string name="text_title_genre">Genre</string>
+    <string name="content_desc_arrow_back">Arrow back</string>
+    <string name="text_summary">Summary</string>
+    <string name="text_you_will_also_like">You will also like</string>
+    <string name="text_read_now">Read Now</string>
 </resources>
